tests/functional/lang/eval-fail-toJSON-infinite-recursion-list.err.exp
error:
       … while calling the 'toJSON' builtin
         at /pwd/lang/eval-fail-toJSON-infinite-recursion-list.nix:4:1:
            3| in
            4| builtins.toJSON xs
             | ^
            5|

       … while evaluating list element at index 0

       error: infinite recursion encountered while converting Nix value to JSON: the value at [0] is the same as the top-level value (only cycle-free data can be represented in JSON)
